--- a/src/lab/exp6/simulation/IfElse/index.html
+++ b/src/lab/exp6/simulation/IfElse/index.html
@@ -14,10 +14,10 @@
 <div class = 'inputDivision' >
 	<div class = 'inputDivisionTitle' ><div class = 'initializePic' ></div><div class = 'initializeText' >Initialize</div></div>
 	<div class = 'inputDivisionBody' >
-		<div class = 'instructionText marginTop' > x1 = 075; &nbsp; y1 = 075;</div>
-		<div class = 'instructionText' > x2 = 275; &nbsp; y2 = 075;</div>
-		<div class = 'instructionText' > x3 = 275; &nbsp; y3 = 325;</div>
-		<div class = 'instructionText' > x4 = 075; &nbsp; y4 = 325;</div>
+		<div class = 'instructionText marginTop' > x1 = 050;  y1 = 050;</div>
+		<div class = 'instructionText' > x2 = 250;  y2 = 050;</div>
+		<div class = 'instructionText' > x3 = 250;  y3 = 300;</div>
+		<div class = 'instructionText' > x4 = 050;  y4 = 300;</div>
 		<div class = 'DayInputText' ><label class = 'dText' >X : </label><input value = '150' class = 'textField' type = 'text'  id = 'textFieldXId' ></div>
 		<div class = 'DayInputText' ><label class = 'dText'>Y : </label><input value = '150' class = 'textField' type = 'text'  id = 'textFieldYId' ></div>
         <div class = 'listDivision margin15' >
@@ -36,16 +36,16 @@
 		<div class = 'instructionText marginTop' >Local Variable : </div>
 		<div>
 			<div class = 'flag_text' >
-				<span id = 'flag1Id' ></span><span id = 'flagValue1' ></span>&emsp;&emsp;&emsp;
+				<span id = 'flag1Id' ></span><span id = 'flagValue1' ></span>
 				<span id = 'flag2Id' ></span><span id = 'flagValue2' ></span> 
 			</div>
 			<div class = 'flag_text' >
-				<span id = 'flag3Id' ></span><span id = 'flagValue3' ></span>&emsp;&emsp;&emsp;
+				<span id = 'flag3Id' ></span><span id = 'flagValue3' ></span>
 				<span id = 'flag4Id' ></span><span id = 'flagValue4' ></span>  
 			</div>
 		</div>
 		<div class = 'flag_text' >
-			<span>x = </span><span id = 'xInnerText' ></span>&emsp;&emsp;&emsp;&emsp;&emsp;
+			<span>x = </span><span id = 'xInnerText' ></span>
 			<span>y = </span><span id = 'yInnerText' ></span>
 		</div>
 	</div>
@@ -54,65 +54,65 @@
 	<div class = 'executionDivisionTitle' ><div class = 'executionPic' ></div><div class = 'executionText' >Step Execution</div></div>
 	<div class="stepExecutionDisplay" id='ifElseCode'>
 		<div class = 'hide' id = 'codeContentIfElse1Id' >void main() {</div>
-		<div class = 'hide' id = 'codeContentIfElse2Id' >&emsp;int flag_1, flag_2, flag_3, flag_4;</div>
-		<div class = 'hide' id = 'codeContentIfElse3Id' >&emsp;flag_1 = flag_2 = flag_3 = flag_4 = 0;</div>
-		<div class = 'hide' id = 'codeContentIfElse4Id' >&emsp;if ( X >= x1 )</div>
-		<div class = 'hide' id = 'codeContentIfElse5Id' >&emsp;{</div>
-		<div class = 'hide' id = 'codeContentIfElse6Id' >&emsp;&emsp;flag_1 = 1;</div>
-		<div class = 'hide' id = 'codeContentIfElse7Id' >&emsp;}</div>
-		<div class = 'hide' id = 'codeContentIfElse8Id' >&emsp;if ( X <= x2 )</div>
-		<div class = 'hide' id = 'codeContentIfElse9Id' >&emsp;{</div>
-		<div class = 'hide' id = 'codeContentIfElse10Id' >&emsp;&emsp;flag_2 = 1;</div>
-		<div class = 'hide' id = 'codeContentIfElse11Id' >&emsp;}</div>
-		<div class = 'hide' id = 'codeContentIfElse12Id' >&emsp;if ( Y >= y1 )</div>
-		<div class = 'hide' id = 'codeContentIfElse13Id' >&emsp;{</div>
-		<div class = 'hide' id = 'codeContentIfElse14Id' >&emsp;&emsp;flag_3 = 1;</div>
-		<div class = 'hide' id = 'codeContentIfElse15Id' >&emsp;}</div>
-		<div class = 'hide' id = 'codeContentIfElse16Id' >&emsp;if ( Y <= y4 )</div>
-		<div class = 'hide' id = 'codeContentIfElse17Id' >&emsp;{</div>
-		<div class = 'hide' id = 'codeContentIfElse18Id' >&emsp;&emsp;flag_4 = 1;</div>
-		<div class = 'hide' id = 'codeContentIfElse19Id' >&emsp;}</div>
-		<div class = 'hide' id = 'codeContentIfElse20Id' >&emsp;if ( flag_1 && flag_2 && flag_3 && flag_4 ) </div>
-		<div class = 'hide' id = 'codeContentIfElse21Id' >&emsp;{</div>
-		<div class = 'hide' id = 'codeContentIfElse22Id' >&emsp;&emsp;printf ( "INSIDE" );</div>
-		<div class = 'hide' id = 'codeContentIfElse23Id' >&emsp;}</div>
-		<div class = 'hide' id = 'codeContentIfElse24Id' >&emsp;else</div>
-		<div class = 'hide' id = 'codeContentIfElse25Id' >&emsp;{</div>
-		<div class = 'hide' id = 'codeContentIfElse26Id' >&emsp;&emsp;printf ( "OUTSIDE" );</div>
-		<div class = 'hide' id = 'codeContentIfElse27Id' >&emsp;}</div>
+		<div class = 'hide' id = 'codeContentIfElse2Id' >int flag_1, flag_2, flag_3, flag_4;</div>
+		<div class = 'hide' id = 'codeContentIfElse3Id' >flag_1 = flag_2 = flag_3 = flag_4 = 0;</div>
+		<div class = 'hide' id = 'codeContentIfElse4Id' >if ( X &gt;=x1 )</div>
+		<div class = 'hide' id = 'codeContentIfElse5Id' >{</div>
+		<div class = 'hide' id = 'codeContentIfElse6Id' >flag_1 = 1;</div>
+		<div class = 'hide' id = 'codeContentIfElse7Id' >}</div>
+		<div class = 'hide' id = 'codeContentIfElse8Id' >if ( X &lt;= x2 )</div>
+		<div class = 'hide' id = 'codeContentIfElse9Id' >{</div>
+		<div class = 'hide' id = 'codeContentIfElse10Id' >flag_2 = 1;</div>
+		<div class = 'hide' id = 'codeContentIfElse11Id' >}</div>
+		<div class = 'hide' id = 'codeContentIfElse12Id' >if ( Y&gt;= y1 )</div>
+		<div class = 'hide' id = 'codeContentIfElse13Id' >{</div>
+		<div class = 'hide' id = 'codeContentIfElse14Id' >flag_3 = 1;</div>
+		<div class = 'hide' id = 'codeContentIfElse15Id' >}</div>
+		<div class = 'hide' id = 'codeContentIfElse16Id' >if ( Y &lt;= y4 )</div>
+		<div class = 'hide' id = 'codeContentIfElse17Id' >{</div>
+		<div class = 'hide' id = 'codeContentIfElse18Id' >flag_4 = 1;</div>
+		<div class = 'hide' id = 'codeContentIfElse19Id' >}</div>
+		<div class = 'hide' id = 'codeContentIfElse20Id' >if ( flag_1 &amp;&amp; flag_2 &amp;&amp;flag_3 &amp;&amp; flag_4 ) </div>
+		<div class = 'hide' id = 'codeContentIfElse21Id' >{</div>
+		<div class = 'hide' id = 'codeContentIfElse22Id' >printf ( "INSIDE" );</div>
+		<div class = 'hide' id = 'codeContentIfElse23Id' >}</div>
+		<div class = 'hide' id = 'codeContentIfElse24Id' >else</div>
+		<div class = 'hide' id = 'codeContentIfElse25Id' >{</div>
+		<div class = 'hide' id = 'codeContentIfElse26Id' >printf ( "OUTSIDE" );</div>
+		<div class = 'hide' id = 'codeContentIfElse27Id' >}</div>
 		<div class = 'hide' id = 'codeContentIfElse28Id' >}</div>
 	</div>
 	<div class='stepExecutionDisplay' id = 'ifElseIfCode'  >
 		<div class = 'hide' 		id = 'codeContentIfElseIf1Id'  >void main() {</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf2Id'  >&emsp;int flag;</div>
-		<div class = 'hide left13' 	id = 'codeContentIfElseIf3Id'  >&emsp;if ( </div>
-		<div class = 'hide left15' 	id = 'codeContentIfElseIf3aId' >X < x1</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf2Id'  >int flag;</div>
+		<div class = 'hide left13' 	id = 'codeContentIfElseIf3Id'  >if ( </div>
+		<div class = 'hide left15' 	id = 'codeContentIfElseIf3aId' >X &lt; x1</div>
 		<div class = 'hide left5'  	id = 'codeContentIfElseIf3bId' >||</div>
-		<div class = 'hide left15' 	id = 'codeContentIfElseIf3cId' >X > x2</div>
+		<div class = 'hide left15' 	id = 'codeContentIfElseIf3cId' >X &gt; x2</div>
 		<div class = 'hide'      	id = 'codeContentIfElseIf3dId' >)</div>
-		<div class = 'hide left40' 	id = 'codeContentIfElseIf4Id'  >&emsp;{</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf5Id'  >&emsp;&emsp;flag = 0;</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf6Id'  >&emsp;}</div>
-		<div class = 'hide left20' 	id = 'codeContentIfElseIf7Id'  >&emsp;else if (</div>
-		<div class = 'hide left15' 	id = 'codeContentIfElseIf7aId' >Y < y1</div>
+		<div class = 'hide left40' 	id = 'codeContentIfElseIf4Id'  >{</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf5Id'  >flag = 0;</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf6Id'  >}</div>
+		<div class = 'hide left20' 	id = 'codeContentIfElseIf7Id'  >else if (</div>
+		<div class = 'hide left15' 	id = 'codeContentIfElseIf7aId' >Y &lt; y1</div>
 		<div class = 'hide left5'  	id = 'codeContentIfElseIf7bId' >||</div>
-		<div class = 'hide left15' 	id = 'codeContentIfElseIf7cId' >Y > y4</div>
+		<div class = 'hide left15' 	id = 'codeContentIfElseIf7cId' >Y &gt; y4</div>
 		<div class = 'hide'      	id = 'codeContentIfElseIf7dId' >)</div>
-		<div class = 'hide left40' 	id = 'codeContentIfElseIf8Id'  >&emsp;{</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf9Id'  >&emsp;&emsp;flag = 0;</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf10Id' >&emsp;}</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf11Id' >&emsp;else</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf12Id' >&emsp;{</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf13Id' >&emsp;&emsp;flag = 1;</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf14Id' >&emsp;}</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf15Id' >&emsp;if ( flag == 1 )</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf16Id' >&emsp;{</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf17Id' >&emsp;&emsp;printf ( "INSIDE" );</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf18Id' >&emsp;}</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf19Id' >&emsp;else</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf20Id' >&emsp;{</div>
-		<div class = 'hide'			id = 'codeContentIfElseIf21Id' >&emsp;&emsp;printf ( "OUTSIDE" );</div>
-		<div class = 'hide' 		id = 'codeContentIfElseIf22Id' >&emsp;}</div>
+		<div class = 'hide left40' 	id = 'codeContentIfElseIf8Id'  >{</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf9Id'  >flag = 0;</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf10Id' >}</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf11Id' >else</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf12Id' >{</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf13Id' >flag = 1;</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf14Id' >}</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf15Id' >if ( flag == 1 )</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf16Id' >{</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf17Id' >printf ( "INSIDE" );</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf18Id' >}</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf19Id' >else</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf20Id' >{</div>
+		<div class = 'hide'			id = 'codeContentIfElseIf21Id' >printf ( "OUTSIDE" );</div>
+		<div class = 'hide' 		id = 'codeContentIfElseIf22Id' >}</div>
 		<div class = 'hide' 		id = 'codeContentIfElseIf23Id' >}</div>
 	</div>
 </div>
@@ -120,7 +120,9 @@
 	<div class = 'outputDivisionTitle' ><div class="outputPic"></div><div class="outputText">Code Output</div></div>
 	<div class = 'resultDisplay' id = 'resultDisplay' >
 		<div id = 'canvasDiv1' class = 'canvasDiv' >
-			<canvas id = 'myCanvas' class = 'myCanvas' width = '350' height = '400'></canvas> 
+			<canvas id = 'myCanvas' class = 'myCanvas' width = '350' height = '400'>
+				
+			</canvas> 
 		</div>
 	</div>
 </div>
