--- a/src/lab/exp2/simulation/index.html
+++ b/src/lab/exp2/simulation/index.html
@@ -37,7 +37,7 @@
 
 			<div class="questionTextRich">4. Choose formula for area of the square :</div>
 			<div class="radioButtonHolder"><input type="radio" class="radiobutton" name="radio_group4" value="a*a"><label class="radioText">a*a</label></div>
-			<div class="radioButtonHolder"><input type="radio" class="radiobutton" name="radio_group4" value="&pi;*a*a"<label class="radioText">&pi;*a*a</label></div>
+			<div class="radioButtonHolder"><input type="radio" class="radiobutton" name="radio_group4" value="&pi;*a*a"><label class="radioText">&pi;*a*a</label></div>
 			<div class="radioButtonHolder"><input type="radio" class="radiobutton" name="radio_group4" value="2*&pi;*a"><label class="radioText">2*&pi;*a</label></div><!-- end of 4th question -->	
 
 			<button class="button okButton" id = 'okSquare'>OK</button>	
@@ -56,9 +56,9 @@
 			<div class="radioButtonHolder"><input type="radio" class="radiobutton" name="radio_group7" value="int"><label class="radioText">int</label></div>
 			<div class="radioButtonHolder"><input type="radio" class="radiobutton" name="radio_group7" value="float"><label class="radioText">float</label></div><!-- end of 3rd question -->		
 
-			<div class="questionTextRich">4. Choose formula for area of the rectangle :</div>
+			<div class="questionTextRich">4. Choose formula for area of the rightangle :</div>
 			<div class="radioButtonHolder"><input type="radio" class="radiobutton" name="radio_group8" value="a*a"><label class="radioText">a*a</label></div>
-			<div class="radioButtonHolder"><input type="radio" class="radiobutton" name="radio_group8" value="a*b"><label class="radioText">a*b</label></div>
+			<div class="radioButtonHolder"><input type="radio" class="radiobutton" name="radio_group8" value="a*b"><label class="radioText">(a*b)/2</label></div>
 			<div class="radioButtonHolder"><input type="radio" class="radiobutton" name="radio_group8" value="2*&pi;*a"><label class="radioText">2*&pi;*a</label></div><!-- end of 4th question -->	
 
 			<button class="button okButton" id = 'okRectangle'>OK</button>	
@@ -119,7 +119,7 @@
 	<div class="executionDivisionTitle"><div class="executionPic"></div><div class="executionText">Step Execution</div></div>
 	<div class="stepExecutionDisplay" >
 		<div class="functionForSquare"><span class="textColor">//function for square</span><br><div id = 'functionSquare'></div></div>
-		<div class="functionForRectangle"><span class="textColor">//function for rectangle</span><br><div id = 'functionRectangle'></div></div>
+		<div class="functionForRectangle"><span class="textColor">//function for rightangle</span><br><div id = 'functionRectangle'></div></div>
 		<div class="functionForTriangle"><span class="textColor">//function for triangle</span><br><div id = 'functionTriangle'></div></div>
 		<div class="functionForCircle"><span class="textColor">//function for circle</span><br><div  id = 'functionCircle'></div></div>
 	</div><!-- end of stepExecutionDisplay -->
@@ -128,10 +128,10 @@
 	<div class="outputDivisionTitle"><div class="outputPic"></div><div class="outputText">Code Output</div></div>
 	<div class="resultDisplay" id = "resultDisplay" >
 		<div class="imageBlock" id = 'imageBlock'>
-			<div class="imageSquare" id = 'imageSquare'><img id='tickSquare' class='tick hide' src="tick.png"></div>
-			<div class="imageRectangle" id = 'imageRectangle'><img id='tickRectangle' class='tick hide' src="tick.png"></div>
-			<div class="imageTriangle" id = 'imageTriangle'><img id='tickTriangle' class='tick hide' src="tick.png"></div>
-			<div class="imageCircle" id = 'imageCircle'><img id='tickCircle' class='tick hide' src="tick.png"></div>
+			<div class="imageSquare" id = 'imageSquare'><img id='tickSquare' class='tick hide' src="square.jpg"></div>
+			<div class="imageRectangle" id = 'imageRectangle'><img id='tickRectangle' class='tick hide' src="rightangle.png"></div>
+			<div class="imageTriangle" id = 'imageTriangle'><img id='tickTriangle' class='tick hide' src="triangle.jpg"></div>
+			<div class="imageCircle" id = 'imageCircle'><img id='tickCircle' class='tick hide' src="circle.jpg"></div>
 		</div><!-- end of imageBlock -->
 		<div class="imageComplex hide" id = 'imageComplex'></div>
 	</div><!-- end of resultDisplay -->
