simulation :CSE4_1_1 ISSUE SOLVED

--- a/src/lab/exp4/simulation/1-D/index.html
+++ b/src/lab/exp4/simulation/1-D/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+	<!-- this experiment has no error :it is  take any input as we have selected "generate random values" -->
 <div id = 'header' > Array ( Insertion Sort ) </div>
 <a href="../../simulation.html"><div class="vlabsIcon"></div></a>
 
